# no-broker-backend

./: .gitignore  API_ENDPOINTS.md  ENDPOINT_TEST_REPORT.md  deploy.sh  import_properties.py  main.py  pyproject.toml  requirements.txt  test_all_endpoints.sh  test_endpoints.sh
app/: main.py
app/api/: auth.py  realty.py
app/configs/: db_config.py
app/core/: exceptions.py  jwt.py
app/dependencies/: auth.py
app/dto/: contact.py  property.py
app/enums/: enums.py
app/models/: realty.py  user.py
app/repo/: realty.py
app/schemas/: realty.py  user.py
app/tests/: test_auth.py
